[package]
name = "actix-telepathy"
version = "0.1.0"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "actix_telepathy"
path = "src/lib.rs"

[workspace]
members = [
  "./",
  "examples/basic",
  "examples/distributed_ml",
  "actix-telepathy-derive"
]

[features]
default = ["derive"]
derive = ["actix_telepathy_derive"]

[dependencies]
actix_telepathy_derive = { version = "0.1.0", optional = true }

log = "0.4"
net2 = "0.2"
byteorder = "1.3"
bytes = "0.5"
actix = "0.10"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
futures = "0.3"
rand = "0.7"
uuid = { version = "0.8", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[patch.crates-io]
actix-telepathy = { path = "." }
actix_telepathy_derive = { path = "actix-telepathy-derive" }
