[package]
name = "actix-telepathy"
version = "0.1.2"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/wenig/actix-telepathy/"
readme = "README.md"
description = "Cluster extension for the actix actor framework"
keywords = ["actor", "distributed", "decentralized", "network", "actix"]
categories = ["network-programming"]

[lib]
name = "actix_telepathy"
path = "src/lib.rs"

[workspace]
members = [
  "./",
  "actix-telepathy-derive"
]

[features]
default = ["derive"]
derive = ["actix_telepathy_derive"]

[dev-dependencies]
actix-rt = "1.1"
port_scanner = "0.1.5"
rayon = "1.5.0"

[dependencies]
actix_telepathy_derive = { version = "0.1.1", optional = true }

log = "0.4"
env_logger = "0.8.2"
net2 = "0.2"
byteorder = "1.3"
bytes = "0.5"
actix = "0.10"
actix-broker = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3.1"
futures = "0.3"
rand = "0.7"
uuid = { version = "0.8", features = ["v4", "serde"] }
once_cell = "1.5.2"
parking_lot = "0.11.1"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
flexbuffers = "0.2"

[patch.crates-io]
actix-telepathy = { path = "." }
actix_telepathy_derive = { path = "actix-telepathy-derive" }
