[package]
name = "actix-telepathy"
version = "0.5.3"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/wenig/actix-telepathy/"
readme = "README.md"
description = "Cluster extension for the actix actor framework"
keywords = ["actor", "distributed", "decentralized", "network", "actix"]
categories = ["network-programming"]

[lib]
name = "actix_telepathy"
path = "src/lib.rs"

[workspace]
members = [
  "./",
  "actix-telepathy-derive"
]

[features]
default = ["derive"]
derive = ["actix_telepathy_derive"]
protocols = []

[dev-dependencies]
actix-rt = "2.0.0"
port_scanner = "0.1.5"
rayon = "1.5.0"
futures-sink = "0.3.21"

[dependencies]
actix_telepathy_derive = { version = "0.3.1", optional = true }

log = "0.4"
env_logger = "0.10"
byteorder = "1.3"
bytes = "1"
actix = "=0.13.0"
actix-broker = "0.4.3"
tokio = { version = "1.18", features = ["io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"]}
futures = "0.3"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.5.2"
parking_lot = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
flexbuffers = "2.0.0"

ndarray = { version = "0.15.4", optional = true, features = ["serde"]}

# dns resolver
trust-dns-proto = { version = "0.22.0", default-features = false, features = ["tokio-runtime"] }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = ["tokio-runtime", "system-config"] }
derive_more = "0.99"

[patch.crates-io]
actix-telepathy = { path = "." }
actix_telepathy_derive = { path = "actix-telepathy-derive" }
