[package]
name = "actix_telepathy_derive"
version = "0.3.2"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/wenig/actix-telepathy/"
readme = "README.md"
description = "Macros for cluster extension for the actix actor framework"
keywords = ["actor", "distributed", "decentralized", "network", "actix"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
log = "0.4"
syn = { version = "2", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
