[package]
name = "basic"
version = "0.1.0"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "1.1"
actix-telepathy = { path="../..", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.7"

structopt = "0.3"
structopt-derive = "0.4"
