[package]
name = "decentfl"
version = "0.1.0"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "1.1"
actix-telepathy = { path="../..", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

log = "0.4"
env_logger = "0.7"
structopt = "0.3"
structopt-derive = "0.4"

tch = "0.3.0"
anyhow = "1.0"
ndarray = "0.13"
rand = "0.7"

