[package]
name = "decentfl"
version = "0.1.0"
authors = ["wenig <info@pwenig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "1.1"
actix-telepathy = { path="../..", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tch-serde = { git = "https://github.com/wenig/tch-serde"}
tokio = { version = "0.2", features = ["full"] }

log = "0.4"
env_logger = "0.7"
structopt = "0.3"
structopt-derive = "0.4"

tch = "0.3"
anyhow = "1.0"
ndarray = "0.13"
rand = "0.7"
rusqlite = "0.24"
glass_pumpkin = "0.4.0"
num-bigint = { version = "0.3.1", features = ["serde"] }
num-integer = "0.1.44"
num-traits = "0.2.14"
gcd = "2.0.1"
async-std = "1.8.0"
